; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_esp_image_format.c_verify_checksum.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_esp_image_format.c_verify_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__, i64 }
%struct.TYPE_4__ = type { i64 }

@ESP_OK = common dso_local global i64 0, align 8
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"Checksum failed. Calculated 0x%x read 0x%x\00", align 1
@ESP_ERR_IMAGE_INVALID = common dso_local global i64 0, align 8
@HASH_LEN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, %struct.TYPE_5__*)* @verify_checksum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @verify_checksum(i32* %0, i32 %1, %struct.TYPE_5__* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [16 x i64], align 16
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %7, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %8, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = add nsw i32 %19, 15
  %21 = and i32 %20, -16
  store i32 %21, i32* %9, align 4
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  %25 = load i32, i32* %8, align 4
  %26 = sext i32 %25 to i64
  %27 = add nsw i64 %24, %26
  %28 = getelementptr inbounds [16 x i64], [16 x i64]* %10, i64 0, i64 0
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %8, align 4
  %31 = sub nsw i32 %29, %30
  %32 = call i64 @bootloader_flash_read(i64 %27, i64* %28, i32 %31, i32 1)
  store i64 %32, i64* %11, align 8
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %8, align 4
  %35 = sub nsw i32 %33, %34
  %36 = sub nsw i32 %35, 1
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds [16 x i64], [16 x i64]* %10, i64 0, i64 %37
  %39 = load i64, i64* %38, align 8
  store i64 %39, i64* %12, align 8
  %40 = load i32, i32* %6, align 4
  %41 = ashr i32 %40, 24
  %42 = load i32, i32* %6, align 4
  %43 = ashr i32 %42, 16
  %44 = xor i32 %41, %43
  %45 = load i32, i32* %6, align 4
  %46 = ashr i32 %45, 8
  %47 = xor i32 %44, %46
  %48 = load i32, i32* %6, align 4
  %49 = ashr i32 %48, 0
  %50 = xor i32 %47, %49
  %51 = sext i32 %50 to i64
  store i64 %51, i64* %13, align 8
  %52 = load i64, i64* %11, align 8
  %53 = load i64, i64* @ESP_OK, align 8
  %54 = icmp ne i64 %52, %53
  br i1 %54, label %59, label %55

55:                                               ; preds = %3
  %56 = load i64, i64* %13, align 8
  %57 = load i64, i64* %12, align 8
  %58 = icmp ne i64 %56, %57
  br i1 %58, label %59, label %65

59:                                               ; preds = %55, %3
  %60 = load i32, i32* @TAG, align 4
  %61 = load i64, i64* %13, align 8
  %62 = load i64, i64* %12, align 8
  %63 = call i32 @ESP_LOGE(i32 %60, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i64 %61, i64 %62)
  %64 = load i64, i64* @ESP_ERR_IMAGE_INVALID, align 8
  store i64 %64, i64* %4, align 8
  br label %92

65:                                               ; preds = %55
  %66 = load i32*, i32** %5, align 8
  %67 = icmp ne i32* %66, null
  br i1 %67, label %68, label %75

68:                                               ; preds = %65
  %69 = load i32*, i32** %5, align 8
  %70 = getelementptr inbounds [16 x i64], [16 x i64]* %10, i64 0, i64 0
  %71 = load i32, i32* %9, align 4
  %72 = load i32, i32* %8, align 4
  %73 = sub nsw i32 %71, %72
  %74 = call i32 @bootloader_sha256_data(i32* %69, i64* %70, i32 %73)
  br label %75

75:                                               ; preds = %68, %65
  %76 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %77 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %76, i32 0, i32 1
  %78 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %77, i32 0, i32 0
  %79 = load i64, i64* %78, align 8
  %80 = icmp ne i64 %79, 0
  br i1 %80, label %81, label %87

81:                                               ; preds = %75
  %82 = load i64, i64* @HASH_LEN, align 8
  %83 = load i32, i32* %9, align 4
  %84 = sext i32 %83 to i64
  %85 = add nsw i64 %84, %82
  %86 = trunc i64 %85 to i32
  store i32 %86, i32* %9, align 4
  br label %87

87:                                               ; preds = %81, %75
  %88 = load i32, i32* %9, align 4
  %89 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %90 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %89, i32 0, i32 0
  store i32 %88, i32* %90, align 8
  %91 = load i64, i64* @ESP_OK, align 8
  store i64 %91, i64* %4, align 8
  br label %92

92:                                               ; preds = %87, %59
  %93 = load i64, i64* %4, align 8
  ret i64 %93
}

declare dso_local i64 @bootloader_flash_read(i64, i64*, i32, i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i64, i64) #1

declare dso_local i32 @bootloader_sha256_data(i32*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
